# django-rest-knox-redis

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.gitea/workflows/: publish.yml  tests.yml
.github/workflows/: publish.yml  tests.yml
knox_redis/: __init__.py  apps.py  auth.py  cache.py  settings.py  signals.py  views.py
tests/: conftest.py  settings.py  test_auth.py  test_cache.py  test_views.py  urls.py
